Added Page 2 for portfolio

--- a/portfolio_two.html
+++ b/portfolio_two.html
@@ -64,29 +64,29 @@
         </section>
         <section class="row">
           <section class="col-sm-12">
-            <div class="project-title"><b>Project 1:</b> Day Planner</div>
+            <div class="project-title"><b>Project 3:</b> Note Taker</div>
             <figure>
               <!-- Day Planner Repo -->
               <img
-                src="https://user-images.githubusercontent.com/38023074/105637935-0d5b4280-5e3e-11eb-8ce3-c42d4fc1376d.png"
-                alt="Day Planner Screenshot"
+                src="https://github.com/binayaluitel2/note-taker/blob/main/note_taker.png?raw=true"
+                alt="Note Taker Screenshot"
                 class="myphoto-portfolio"
               />
               <div class="nav-link">
                 <b>GitHub Repo:</b>
                 <a
                   class="nav-link"
-                  href="https://github.com/binayaluitel2/DayPlanner"
+                  href="https://github.com/binayaluitel2/note-taker"
                   target="_blank"
                 >
                   CLICK HERE</a
                 >
               </div>
               <div class="nav-link">
-                <b>Deployed App:</b>
+                <b>Deployed App in Heroku:</b>
                 <a
                   class="nav-link"
-                  href="https://binayaluitel2.github.io/DayPlanner/"
+                  href="https://warm-cliffs-50366.herokuapp.com/"
                   target="_blank"
                 >
                   CLICK HERE</a
@@ -97,12 +97,12 @@
         </section>
         <section class="row">
           <section class="col-sm-12">
-            <div class="project-title"><b>Project 2:</b> Code Quiz</div>
+            <div class="project-title"><b>Project 4:</b> Team Profile Generator</div>
             <figure>
               <!-- Code Quiz Repo -->
               <img
-                src="https://user-images.githubusercontent.com/38023074/105637995-5e6b3680-5e3e-11eb-9cc6-c2bfbaf05754.png"
-                alt="Code Quiz Screenshot"
+                src="https://github.com/binayaluitel2/team-profile-generator/blob/main/team_profile.png?raw=true"
+                alt="Team Profile Generator Screenshot"
                 class="myphoto-portfolio"
               />
               <!-- Image of Cypress -->
@@ -110,13 +110,13 @@
                 <b>GitHub Repo:</b>
                 <a
                   class="nav-link"
-                  href="https://github.com/binayaluitel2/code-quiz"
+                  href="https://github.com/binayaluitel2/team-profile-generator"
                   target="_blank"
                 >
                   CLICK HERE</a
                 >
               </div>
-              <div class="nav-link">
+              <!-- <div class="nav-link">
                 <b>Deployed App:</b>
                 <a
                   class="nav-link"
@@ -125,26 +125,18 @@
                 >
                   CLICK HERE</a
                 >
-              </div>
+              </div> -->
             </figure>
           </section>
         </section>
-        <!-- <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-center">
-            <li class="page-item disabled">
-            </li>
-            <li class="page-item"><a class="page-link" href="portfolio.html">1</a></li>
-            <li class="page-item"><a class="page-link" href="portfolio_two.html">2</a></li>
-            <li class="page-item">
-            </li>
-          </ul>
-        </nav> -->
         <nav aria-label="...">
           <ul class="pagination pagination-lg justify-content-center">
-            <li class="page-item active" aria-current="page">
-              <span class="page-link">1</span>
+            <li class="page-item">
+              <a class="page-link" href="portfolio.html">1</a>
             </li>
-            <li class="page-item"><a class="page-link" href="portfolio_two.html">2</a></li>
+            <li class="page-item active" aria-current="page">
+              <span class="page-link">2</span>
+            </li>
           </ul>
         </nav>
         <!-- Surrounding End -->
